# ark_runtime_core

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gn  .standalone_gn  AUTHORS  BUILD.gn  CMakeLists.txt  OAT.xml  README.en.md  README.md  README_zh.md  ark_config.gni  bundle.json  ohos.build
assembler/: BUILD.gn  CMakeLists.txt  annotation.cpp  annotation.h  asm_isapi.rb  asm_metadata.rb  assembly-context.h  assembly-debug.h  assembly-emitter.cpp  assembly-emitter.h  assembly-field.h  assembly-file-location.h  assembly-function.h  assembly-ins.cpp  assembly-ins.h  assembly-label.h  assembly-literals.h  assembly-methodhandle.h  assembly-parser.cpp  assembly-parser.h  assembly-program.cpp  assembly-program.h  assembly-record.h  assembly-type.cpp  assembly-type.h  context.cpp  define.h  error.h  ide_helpers.h  lexer.cpp  lexer.h  mangling.h  meta.cpp  meta.h  metadata.yaml  pandasm.cpp  pandasm.h
assembler/extensions/: extensions.cpp  extensions.h
assembler/samples/: Bubblesort.pa  Factorial.pa  Fibonacci.pa
assembler/templates/: builtin_parsing.cpp.erb  builtin_parsing_tests.cpp.erb  ins_create_api.h.erb  ins_create_builtins_api.h.erb  ins_emit.h.erb  ins_to_string.cpp.erb  isa.h.erb  meta_gen.cpp.erb  opcode_parsing.h.erb  operand_types_print.h.erb
assembler/tests/: emitter_test.cpp  lexer_test.cpp  mangling_tests.cpp  parser_test.cpp
assembler/utils/: number-utils.h
disassembler/: BUILD.gn  CMakeLists.txt  accumulators.h  disasm.cpp  disassembler.cpp  disassembler.h
disassembler/templates/: bc_ins_to_pandasm_ins.cpp.erb  get_ins_info.cpp.erb  get_instructions.cpp.erb  intrinsics_gen.h.erb  opcode_translator.cpp.erb  type_to_pandasm_type.cpp.erb
disassembler/tests/: instructions_test.cpp  labels_test.cpp  records_test.cpp
dprof/: BUILD.gn  CMakeLists.txt
dprof/converter/: CMakeLists.txt  features_manager.h  main.cpp  options.yaml
dprof/daemon/: CMakeLists.txt  main.cpp  options.yaml
dprof/libdprof/: CMakeLists.txt
dprof/libstorage/: CMakeLists.txt
isa/: BUILD.gn  CMakeLists.txt  ChangeLog.md  README.md  asserts.rb  builtins.yaml  builtinsapi.rb  combine.rb  gen.rb  gen_wrapper.sh  isa.yaml  isapi.rb  schema.json
isa/templates/: instructions.txt.erb  isa.md.erb
libpandabase/: BUILD.gn  CMakeLists.txt  README.md  clang.h  concepts.h  globals.h  macros.h  options.yaml
libpandabase/cmake/: mm_coverage.cmake
libpandabase/events/: events.h  events.rb  events.yaml  events_gen.h.erb
libpandabase/mem/: alloc_tracker.cpp  alloc_tracker.h  arena.cpp  arena.h  arena_allocator.cpp  arena_allocator.h  arena_allocator_stl_adapter.h  base_mem_stats.cpp  base_mem_stats.h  code_allocator.cpp  code_allocator.h  gc_barrier.h  malloc_mem_pool-inl.h  malloc_mem_pool.h  mem.h  mem_config.cpp  mem_config.h  mem_pool.h  mem_range.h  mmap_mem_pool-inl.h  mmap_mem_pool.h  object_pointer.h  pool_manager.cpp  pool_manager.h  pool_map.cpp  pool_map.h  space.h
libpandabase/os/: debug_info.cpp  debug_info.h  dfx_option.cpp  dfx_option.h  error.h  exec.h  failure_retry.h  file.h  filesystem.cpp  filesystem.h  library_loader.h  mem.h  mem_hooks.h  mutex.cpp  mutex.h  native_stack.cpp  native_stack.h  property.cpp  property.h  sighook.h  stacktrace.cpp  stacktrace.h  stacktrace_stub.cpp  thread.h  time.cpp  time.h  unique_fd.h
libpandabase/serializer/: for_each_tuple.h  serializer.h  struct_to_tuple.h  tuple_to_struct.h
libpandabase/tests/: alloc_tracker_test.cpp  arena_allocator_test.cpp  arena_test.cpp  base_mem_stats_test.cpp  base_thread_test.cpp  bit_helpers_test.cpp  bit_memory_region_test.cpp  bit_table_test.cpp  bit_utils_test.cpp  bit_vector_test.cpp  code_allocator_test.cpp  dfx_test.cpp  expected_test.cpp  hash_test.cpp  json_parser_test.cpp  leb128_test.cpp  list_test.cpp  logger_test.cpp  math_helpers_test.cpp  mem_range_test.cpp  memory_literals_test.cpp  mmap_fixed_test.cpp  mmap_mem_pool_test.cpp  native_bytes_from_mallinfo_test.cpp  pandargs_test.cpp  pool_map_test.cpp  serializer_test.cpp  small_vector_test.cpp  span_test.cpp  string_helpers_test.cpp  type_converter_tests.cpp  unique_fd_test.cpp  utf_test.cpp
libpandabase/utils/: dfx.h  (+43 more)
libpandafile/: BUILD.gn  CMakeLists.txt  annotation_data_accessor.cpp  annotation_data_accessor.h  ark_version.cpp  ark_version.h  bytecode_emitter.cpp  bytecode_emitter.h  bytecode_instruction-inl.h  bytecode_instruction.h  class_data_accessor-inl.h  class_data_accessor.cpp  class_data_accessor.h  code_data_accessor-inl.h  code_data_accessor.cpp  code_data_accessor.h  debug_data_accessor-inl.h  debug_data_accessor.cpp  debug_data_accessor.h  debug_info_extractor.cpp  debug_info_extractor.h  field_data_accessor-inl.h  field_data_accessor.cpp  field_data_accessor.h  file-inl.h  file.cpp  file.h  file_format_version.cpp  file_item_container.cpp  file_item_container.h  file_items.cpp  file_items.h  file_writer.cpp  file_writer.h  helpers.h  line_number_program.h  line_program_state.h  literal_data_accessor-inl.h  literal_data_accessor.cpp  literal_data_accessor.h  (+16 more)
libziparchive/: BUILD.gn  CMakeLists.txt  zip_archive.cpp  zip_archive.h
panda/: BUILD.gn  CMakeLists.txt  panda.cpp
runtime/: BUILD.gn  CMakeLists.txt  assert_gc_scope.cpp  assert_gc_scope.h  cframe.cpp  class.cpp  class_helper.cpp  class_initializer.cpp  class_initializer.h  class_linker.cpp  class_linker_context.h  class_linker_extension.cpp  dyn_class_linker_extension.cpp  dyn_class_linker_extension.h  exceptions.cpp  field.cpp  file_manager.cpp  gc_task.cpp  global_handle_storage-inl.h  global_handle_storage.h  handle_base-inl.h  handle_base.h  handle_scope-inl.h  handle_scope.cpp  handle_scope.h  handle_storage-inl.h  handle_storage.h  imtable_builder.cpp  intrinsics.cpp  itable_builder.cpp  language_context.cpp  locks.cpp  mark_word.cpp  mark_word.h  method.cpp  monitor.cpp  monitor.h  monitor_object_lock.cpp  monitor_object_lock.h  monitor_pool.cpp  (+25 more)
tests/: CMakeLists.txt
verification/: CMakeLists.txt  Verification.cmake  messages.yaml  verification.gni  verification.rb  verification.yaml  verification_options.cpp  verification_options.h
(+1363 files in other folders)
