# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//ark/runtime_core/ark_config.gni")
import("//build/ohos.gni")

config("libdprof_config") {
  include_dirs = [
    "$ark_root",
    "$ark_root/dprof/libdprof",
    "$ark_root/libpandabase",
  ]
}

source_set("libdprof_static") {
  sources = [
    "libdprof/dprof/ipc/ipc_message.cpp",
    "libdprof/dprof/ipc/ipc_unix_socket.cpp",
    "libdprof/dprof/profiling_data.cpp",
  ]

  public_configs = [
    "$ark_root:ark_config",
    "$ark_root/libpandabase:arkbase_public_config",
    sdk_libc_secshared_config,
    ":libdprof_config",
  ]

  deps = [ "$ark_root/libpandabase:libarkbase" ]
}

ohos_static_library("libdprof") {
  deps = [ ":libdprof_static" ]

  subsystem_name = "ark"
  part_name = "ark"
}
